# gota-api

./: .flake8  README.md  pyproject.toml  user_fixture.json
.githooks/: pre-commit
src/gota_api/: main.py
src/gota_api/models/: base.py  mentorship.py  model.py  user.py
src/gota_api/repositories/: repository.py  user.py
src/gota_api/routers/: users.py
src/gota_api/storage/: dynamodb.py  memory.py  storage.py  types.py
tests/: test_gota_api.py
