[tool.poetry]
name = "gota-api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
arrow = "^1.2.2"
mangum = "^0.15.1"
uvicorn = "^0.18.3"
boto3 = "^1.24.63"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["gota_api"]

[tool.flake8]
max_line_length = 100
#    Black-compatible
#    E203 and W503 have edge cases handled by black
ignore = ['E203', 'W503']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
